@@ -28,14 +28,17 @@
 G_BEGIN_DECLS
 
 /* Macros for declaring GObject subclasses */
+#undef PRIVATE
 #define PRIVATE(x) ((x)->priv)
 
 /* Debugging system, to try to make it easier to spot reference leaks: */
 void 
-cong_object_debug_instance_init (GObject *object);
+cong_object_debug_instance_init (GObject *object, 
+				 GType type);
 
 void
-cong_object_debug_finalize (GObject *object);
+cong_object_debug_finalize (GObject *object,
+			    GType type);
 
 guint32
 cong_object_debug_get_instance_count (void);
@@ -43,115 +46,120 @@ cong_object_debug_get_instance_count (void);
 guint32
 cong_object_debug_get_instance_count_for_class (GObjectClass *klass);
 
+guint32
+cong_object_debug_get_instance_count_for_type (GType type);
+
 #if 1
-#define CONG_OBJECT_DEBUG_INSTANCE_INIT(object) cong_object_debug_instance_init (object)
-#define CONG_OBJECT_DEBUG_FINALIZE(object) cong_object_debug_finalize (object)
+#define CONG_OBJECT_DEBUG_INSTANCE_INIT(object, type) cong_object_debug_instance_init (object, type)
+#define CONG_OBJECT_DEBUG_FINALIZE(object, type) cong_object_debug_finalize (object, type)
 #else
-#define CONG_OBJECT_DEBUG_INSTANCE_INIT(object) ((void)0)
-#define CONG_OBJECT_DEBUG_FINALIZE(object) ((void)0)
+#define CONG_OBJECT_DEBUG_INSTANCE_INIT(object, type) ((void)0)
+#define CONG_OBJECT_DEBUG_FINALIZE(object, type) ((void)0)
 #endif
 
 /* Macros for declaring and defining GObject subclasses in various ways: */
+#define CONG_DECLARE_GET_TYPE(my_class) \
+  extern GType my_class##_get_type (void);
+
 #define CONG_DECLARE_CLASS_BEGIN(MyClass, my_class, BaseClass) \
-extern GType my_class##_get_type (void); \
-typedef struct MyClass##Class MyClass##Class; \
-typedef struct MyClass##Private MyClass##Private; \
-struct MyClass \
-{ \
-	BaseClass base_obj; \
-	MyClass##Private *priv; \
-}; \
-struct MyClass##Class \
-{ \
+  CONG_DECLARE_GET_TYPE(my_class) \
+  typedef struct MyClass##Class MyClass##Class; \
+  typedef struct MyClass##Private MyClass##Private; \
+  struct MyClass \
+  { \
+  	BaseClass base_obj; \
+  	MyClass##Private *priv; \
+  }; \
+  struct MyClass##Class \
+  { \
 	BaseClass##Class base_class; \
 
 #define CONG_DECLARE_CLASS_END() \
 };
 
 #define CONG_DECLARE_CLASS_PUBLIC_DATA(MyClass, my_class, BaseClass, PublicDataDecls, ClassFunctionDecls) \
-extern GType my_class##_get_type (void); \
-typedef struct MyClass##Class MyClass##Class; \
-typedef struct MyClass##Private MyClass##Private; \
-struct MyClass \
-{ \
-	BaseClass base_obj; \
-        PublicDataDecls \
-}; \
-struct MyClass##Class \
-{ \
-	BaseClass##Class base_class; \
-        ClassFunctionDecls \
-};
+  CONG_DECLARE_GET_TYPE(my_class) \
+  typedef struct MyClass##Class MyClass##Class; \
+  struct MyClass \
+  { \
+  	BaseClass base_obj; \
+          PublicDataDecls \
+  }; \
+  struct MyClass##Class \
+  { \
+  	BaseClass##Class base_class; \
+          ClassFunctionDecls \
+  };
+
+#define CONG_DEFINE_CLASS_DECLARE_FUNCTIONS(my_class) \
+  static void my_class##_finalize (GObject *object); \
+  static void my_class##_dispose (GObject *object);
 
 #define CONG_DECLARE_CLASS(MyClass, my_class, BaseClass) \
-CONG_DECLARE_CLASS_BEGIN(MyClass, my_class, BaseClass) \
-CONG_DECLARE_CLASS_END()
+  CONG_DECLARE_CLASS_BEGIN(MyClass, my_class, BaseClass) \
+  CONG_DECLARE_CLASS_END()
 
 /* Macros for defining GObject subclasses: */
 #define CONG_DEFINE_CLASS_BEGIN(MyClass, my_class, MY_CLASS, BaseClass, BASE_CLASS_TYPE) \
-static void my_class##_finalize (GObject *object); \
-static void my_class##_dispose (GObject *object); \
-\
-GNOME_CLASS_BOILERPLATE(MyClass, my_class, BaseClass, BASE_CLASS_TYPE) \
-\
-static void \
-my_class##_instance_init (MyClass *obj) \
-{ \
-obj->priv = g_new0 (MyClass##Private, 1); \
-CONG_OBJECT_DEBUG_INSTANCE_INIT( G_OBJECT(obj)); \
-} \
-static void \
-my_class##_finalize (GObject *object) \
-{ \
+  CONG_DEFINE_CLASS_DECLARE_FUNCTIONS(my_class) \
+  GNOME_CLASS_BOILERPLATE(MyClass, my_class, BaseClass, BASE_CLASS_TYPE) \
+  \
+  static void \
+  my_class##_instance_init (MyClass *obj) \
+  { \
+    obj->priv = g_new0 (MyClass##Private, 1); \
+    CONG_OBJECT_DEBUG_INSTANCE_INIT( G_OBJECT(obj), my_class##_get_type()); \
+  } \
+  static void \
+  my_class##_finalize (GObject *object) \
+  { \
 	MyClass *my_obj = MY_CLASS(object); \
-        CONG_OBJECT_DEBUG_FINALIZE (object); \
+        CONG_OBJECT_DEBUG_FINALIZE (object, my_class##_get_type()); \
 	g_assert (my_obj->priv); \
 	g_free (my_obj->priv); \
 	my_obj->priv = NULL; \
 	G_OBJECT_CLASS (parent_class)->finalize (object); \
-} \
-static void \
-my_class##_class_init (MyClass##Class *klass) \
-{ \
-	G_OBJECT_CLASS (klass)->finalize = my_class##_finalize; \
+  } \
+  static void \
+  my_class##_class_init (MyClass##Class *klass) \
+  { \
+  	G_OBJECT_CLASS (klass)->finalize = my_class##_finalize; \
 	G_OBJECT_CLASS (klass)->dispose = my_class##_dispose; \
 
 #define CONG_DEFINE_CLASS_END() \
-};
+  };
 
 #define CONG_DEFINE_CLASS_PUBLIC_DATA(MyClass, my_class, MY_CLASS, BaseClass, BASE_CLASS_TYPE, ClassInitCodeFragment) \
-static void my_class##_finalize (GObject *object); \
-static void my_class##_dispose (GObject *object); \
+  CONG_DEFINE_CLASS_DECLARE_FUNCTIONS(my_class) \
+  GNOME_CLASS_BOILERPLATE(MyClass, my_class, BaseClass, BASE_CLASS_TYPE) \
 \
-GNOME_CLASS_BOILERPLATE(MyClass, my_class, BaseClass, BASE_CLASS_TYPE) \
-\
-static void \
-my_class##_instance_init (MyClass *obj) \
-{ \
-CONG_OBJECT_DEBUG_INSTANCE_INIT (G_OBJECT (obj)); \
-} \
-static void \
-my_class##_finalize (GObject *object) \
-{ \
-	/*MyClass *my_obj = MY_CLASS(object);*/ \
-        CONG_OBJECT_DEBUG_FINALIZE (object); \
+  static void \
+  my_class##_instance_init (MyClass *obj) \
+  { \
+  CONG_OBJECT_DEBUG_INSTANCE_INIT (G_OBJECT (obj), my_class##_get_type() ); \
+  } \
+  static void \
+  my_class##_finalize (GObject *object) \
+  { \
+  	/*MyClass *my_obj = MY_CLASS(object);*/ \
+        CONG_OBJECT_DEBUG_FINALIZE (object, my_class##_get_type()); \
 	G_OBJECT_CLASS (parent_class)->finalize (object); \
-} \
-static void \
-my_class##_class_init (MyClass##Class *klass) \
-{ \
+  } \
+  static void \
+  my_class##_class_init (MyClass##Class *klass) \
+  { \
 	G_OBJECT_CLASS (klass)->finalize = my_class##_finalize; \
 	G_OBJECT_CLASS (klass)->dispose = my_class##_dispose; \
         ClassInitCodeFragment \
-};
+  };
 
 #define CONG_DEFINE_EMPTY_DISPOSE(my_class) \
-static void my_class##_dispose (GObject *object) {}
+  static void my_class##_dispose (GObject *object) {}
 
 #define CONG_DEFINE_CLASS(MyClass, my_class, MY_CLASS, BaseClass, BASE_CLASS_TYPE) \
-CONG_DEFINE_CLASS_BEGIN(MyClass, my_class, MY_CLASS, BaseClass, BASE_CLASS_TYPE) \
-CONG_DEFINE_CLASS_END() \
-CONG_DEFINE_EMPTY_DISPOSE(my_class)
+  CONG_DEFINE_CLASS_BEGIN(MyClass, my_class, MY_CLASS, BaseClass, BASE_CLASS_TYPE) \
+  CONG_DEFINE_CLASS_END() \
+  CONG_DEFINE_EMPTY_DISPOSE(my_class)
 
 G_END_DECLS
 
