@@ -1,5 +1,9 @@
 2004-03-08  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-area-text-fragment.c, cong-editor-area.c, cong-editor-creation-record.c, cong-editor-line-iter-span-wrapper.c, cong-editor-line-manager-span-wrapper.c, cong-editor-line-manager.c, cong-editor-node-comment.c, cong-editor-node-document.c, cong-editor-node-dtd.c, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, cong-editor-node-element.c, cong-editor-node-entity-decl.c, cong-editor-node-entity-ref.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-object.c, cong-object.h, plugin-admonition-node-element.c, plugin-lists-node-element-listitem.c, plugin-paragraph-node-element-paragraph.c
+	
+	CongEditorNode now uses cong-object macros, lots of reference count and cleanup fixing
+
 	* cong-object.c, cong-object.h, Makefile.am
 
 	Debugging logs of instance_init and finalize for our GObject macros, to make it easier to track reference leaks etc
